# sentinel

./: .gitignore  CMakeLists.txt  README.md  sentinel_estado.txt
config/: sentinel.json
include/: backup.h  comandos.h  comandos_auxiliar.h  comandos_backup.h  comandos_deamon.h  comandos_estado.h  comandos_monitor.h  comandos_organizador.h  config.h  config_compartida.h  config_loader.h  descriptor_inotify.h  errores.h  logger.h  monitor.h  notificador.h  organizer.h  procesar_comandos.h  rutas.h  sentinel_config.h  sentinel_estado.h
scripts/: install.sh  sentinel-cli.sh
src/: config_loader.cpp  logger.cpp  main.cpp  notificador.cpp  rutas.cpp  sentinel_config.cpp  sentinel_estado.cpp
src/backup/: backup.cpp
src/comandos/: comandos.cpp  comandos_auxiliar.cpp  comandos_backup.cpp  comandos_deamon.cpp  comandos_estado.cpp  comandos_monitor.cpp  comandos_organizador.cpp  procesar_comandos.cpp
src/config_json/: config_loader.cpp  sentinel_config.cpp
src/monitor/: monitor.cpp
src/organizer/: organizer.cpp
